added features in community and made some fixes

--- a/recom_sys_app/templates/recom_sys_app/community_deck.html
+++ b/recom_sys_app/templates/recom_sys_app/community_deck.html
@@ -293,7 +293,7 @@
             <h1 class="text-3xl font-bold mb-2" style="color: #4c1d95;">
                 {% if is_community %}Community{% else %}Group{% endif %} Movie Deck
             </h1>
-            <p style="color: #6b46c1;">{% if is_community %}Discover movies based on your mood!{% else %}Swipe together with your group!{% endif %}</p>
+            <p style="color: #6b46c1;">{% if is_community %}Discover movies based on your mood!{% else %}Discover movies based on your mood!{% endif %}</p>
         </div>
 
         <!-- Loading State -->
